# MoosEngine

./: .gitignore  Build.bat  CMakeLists.txt  LICENSE  LoadTest.txt  README.md  SimpleWaveTest.txt  imgui.ini
Content/Animations/: Wave.txt
Content/Images/: box_n.pdn
Content/Models/BasicCube/: BasicCube.blend  BasicCube.blend1  BasicCube.mtl
Content/Models/Door/: Door.mtl  DoorFrame.blend  DoorFrame.blend1
Content/Models/Gasmask/: gasmaskV2_5.mtl
Content/Models/Ground/: ground.mtl
Content/Models/Portals/: Frame.mtl  PortalB.mtl  corner.blend  corner.mtl
Content/Models/Tank/: fulltank.mtl  tank_bottom.mtl  tank_top.mtl
Content/Models/TestCube/: TestCube.blend  TestCube.blend1  TestCube.mtl
Content/Models/VehiclePlatform/: vehicle_platform.pdn  vehicle_platform_dif.pdn  vehicle_platform_frame.mtl  vehicle_platform_full.mtl  vehicle_platform_left.mtl  vehicle_platform_right.mtl
Content/Models/flatplane/: flatplane – kopio.mtl  flatplane.blend  flatplane.blend1
Content/Shaders/Basic/: shader.fragment  shader.vertex
Content/Shaders/Basic_Textured/: shader.vertex
Content/Shaders/Color2D/: shader.fragment  shader.vertex
Content/Shaders/MVP_Textured/: shader.fragment  shader.vertex
Content/Shaders/MVP_Textured_Unlit/: shader.fragment  shader.vertex
Content/Shaders/Skybox/: shader.fragment  shader.vertex
Content/Shaders/Stencil2D/: shader.fragment  shader.vertex
Content/Shaders/Textured2D/: shader.fragment  shader.vertex
code/: CMakeLists.txt
code/headers/: Animation.h  Box2D.h  Entity.h  Entity2D.h  Follower.h  FragmentShader.h  Geometry.h  InputManager.h  Matrix.h  ModelManager.h  Octree.h  Pathfinding.h  Player2D.h  Portal.h  Quadtree.h  RenderFunctions.h  Renderer2D.h  Rigidbody.h  Scene.h  Turret.h  Vector.h  Vehicle.h  Vertex.h  VertexShader.h
code/source/: Animation.cpp  Box2D.cpp  Entity.cpp  Entity2D.cpp  Geometry.cpp  InputManager.cpp  ModelManager.cpp  Octree.cpp  Player2D.cpp  Portal.cpp  Quadtree.cpp  RenderFunctions.cpp  Renderer2D.cpp  Rigidbody.cpp  Scene.cpp  Vertex.cpp  main.cpp
include/Assimp/lib/x64/: assimp.lib  assimp_x86_new.lib
